--- a/_posts/CPS330.md
+++ b/_posts/CPS330.md
@@ -96,7 +96,10 @@ which gcc gfortran g77
 ./C
 {% endcode %}
 
-* 添加编译后的bin目录至PATH
+* 添加编译后的bin目录至`PATH`中，即在`shell` 配置文件`.zshrc`中, 添加如下:
+```
+export PATH="~/src/CPFS/PROGRAMS.330/bin:$PATH" 
+```
 
 # 参考文献
 **[computer programs in seismology](http://www.eas.slu.edu/eqc/eqccps.html)**
